First attempt at adding dynamic rotation (just RandR 1.1 for now)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -45,9 +45,10 @@ amd_drv_la_SOURCES = \
         amd_gx_cursor.c \
         amd_gx_dga.c \
         amd_gx_video.c \
-        amd_gx_shadow.c \
         amd_gx_regacc.c \
+	amd_gx_rotate.c \
 	amd_gx_dcon.c \
+	amd_gx_randr.c \
         durango.c \
         panel.c \
         amd_lx_driver.c \
