Rename: amd_gx_dcon.c -> amd_dcon.c

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -46,6 +46,7 @@ amd_drv_la_SOURCES = \
         cim_dev.h \
         amd_driver.c \
 	amd_common.c \
+        amd_dcon.c \
 	amd_msr.c \
         amd_gx_driver.c\
         amd_gx_accel.c \
@@ -53,7 +54,6 @@ amd_drv_la_SOURCES = \
         amd_gx_video.c \
         amd_gx_regacc.c \
         amd_gx_rotate.c \
-        amd_gx_dcon.c \
         amd_gx_randr.c \
         durango.c \
         panel.c \
