--- a/configure.ac
+++ b/configure.ac
@@ -21,9 +21,9 @@
 # Process this file with autoconf to produce a configure script
 
 AC_PREREQ(2.57)
-AC_INIT([xf86-video-amd],
-        2.7.7.7,
-        [https://bugs.freedesktop.org/enter_bug.cgi?product=xorg&component=Driver%2FAMD],
+AC_INIT([xf86-video-geode],
+        2.8.0,
+        [https://bugs.freedesktop.org/enter_bug.cgi?product=xorg&component=Driver%2Fgeode],
         xf86-video-geode)
 
 AC_CONFIG_SRCDIR([Makefile.am])
