geode:  Add "native" DDC parsing to the Geode driver
Teach libDDC to access the DDC pins on the Geode natively, instead
of using the BIOS which has proven to be broken time and time again.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -46,6 +46,7 @@ geode_drv_la_SOURCES = \
         geode_driver.c \
 	geode_common.c \
         geode_dcon.c \
+	geode_ddc.c \
 	geode_msr.c \
         gx_driver.c\
         gx_accel.c \
