Build fix: set EXA_DRIVER_KNOWN_MAJOR=3.
We don't use {Prepare,Finish}Access, and:

/home/cjb/xorg-build/include/xorg/exa.h:45:2: error: #error Make sure
this EXA driver either does not have Prepare/FinishAccess hooks or that
they can handle EXA_PREPARE_AUX*, and #define EXA_DRIVER_KNOWN_MAJOR 3
before including exa.h

Signed-off-by: Chris Ball <cjb@laptop.org>

--- a/configure.ac
+++ b/configure.ac
@@ -101,6 +101,9 @@ if test "x$XSERVER_LIBPCIACCESS" = xyes; then
     XORG_CFLAGS="$XORG_CFLAGS $PCIACCESS_CFLAGS"
 fi
 
+# Required by exa.h
+AMD_CFLAGS="$AMD_CFLAGS -DEXA_DRIVER_KNOWN_MAJOR=3"
+
 AC_SUBST([XORG_CFLAGS])
 AC_SUBST([moduledir])
 AC_SUBST([AMD_CFLAGS])
