Revert "Makefile.am: do not include autogen.sh in distribution #24183"
This reverts commit c77803368611751f828c1cc7b00e77157b7774b3.

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,6 +19,7 @@
 #  CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 SUBDIRS = src
+EXTRA_DIST = autogen.sh
 
 .PHONY: ChangeLog INSTALL
 
