--- a/Makefile.am
+++ b/Makefile.am
@@ -18,7 +18,8 @@
 #  IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 #  CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
-SUBDIRS = src
+SUBDIRS = src ztv
+
 MAINTAINERCLEANFILES = ChangeLog INSTALL
 EXTRA_DIST = autogen.sh
 
