--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -33,7 +33,7 @@ AM_CPPFLAGS = 			\
 # -DPNL_SUP is now provided by AMD_CFLAGS
 #
 AM_CFLAGS = @XORG_CFLAGS@ \
-   -DHAVE_GX -DHAVE_LX -DAMD_V4L2_VIDEO -DOPT_ACCEL \
+   -DHAVE_GX -DHAVE_LX -DOPT_ACCEL \
    -DLINUX_2_6 @AMD_CFLAGS@
 
 AM_CCASFLAGS = @XORG_CFLAGS@
