--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -34,7 +34,7 @@ AM_CPPFLAGS = 			\
 #
 AM_CFLAGS = @XORG_CFLAGS@ \
    -DHAVE_GX -DHAVE_LX -DOPT_ACCEL \
-   -DLINUX_2_6 @AMD_CFLAGS@
+   @AMD_CFLAGS@
 
 AM_CCASFLAGS = @XORG_CFLAGS@
 geode_drv_la_LTLIBRARIES = geode_drv.la
