Remove duplicate warning variable and werror option
Use already existing:
  --enable-strict-compilation
                          Enable all warnings from compiler and make them
                          errors (default: disabled)
which, byt the way was broken as it was not implemented in geode.

Use already existing CWARNINGFLAGS variable, so there is no need
to define GCC_WARNINGS.

Both come from util-macros version 1.4 or later.
http://cgit.freedesktop.org/xorg/util/macros/tree/xorg-macros.m4.in
?id=03b04a6b5d61aafbd2705f7d29e58e0c92553a4a

If you configure with a later version of util-macros you may see new
warnings appear as additional flags have been added over the years.

You get better support for platforms/compiler differences.

Signed-off-by: Gaetan Nadon <memsize@videotron.ca>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -32,9 +32,13 @@ AM_CPPFLAGS = 			\
 
 # -DPNL_SUP is now provided by AMD_CFLAGS
 #
-AM_CFLAGS = @XORG_CFLAGS@ \
-   -DHAVE_GX -DHAVE_LX -DOPT_ACCEL \
-   @AMD_CFLAGS@
+AM_CFLAGS = 		\
+	$(XORG_CFLAGS)	\
+	$(CWARNFLAGS)	\
+	$(AMD_CFLAGS)	\
+	-DHAVE_GX	\
+	-DHAVE_LX	\
+	-DOPT_ACCEL
 
 geode_drv_la_LTLIBRARIES = geode_drv.la
 geode_drv_la_LDFLAGS = -module -avoid-version
