--- a/ztv/Makefile.am
+++ b/ztv/Makefile.am
@@ -1,7 +1,7 @@
 
 if BUILD_ZTV
 
-AM_CFLAGS = $(XORG_CFLAGS) $(CWARNFLAGS) $(AMD_CFLAGS)
+AM_CFLAGS = $(XORG_CFLAGS) $(CWARNFLAGS)
 
 ztv_drv_la_LTLIBRARIES = ztv_drv.la
 ztv_drv_la_LDFLAGS = -module -avoid-version
