--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -37,7 +37,7 @@ AM_CFLAGS = $(XORG_CFLAGS) $(CWARNFLAGS) $(M32_CFLAGS)
 
 geode_drv_la_LTLIBRARIES = geode_drv.la
 geode_drv_la_LDFLAGS = -module -avoid-version
-geode_drv_ladir = @moduledir@/drivers
+geode_drv_ladir = $(moduledir)/drivers
 
 geode_drv_la_SOURCES =		\
 	cimarron.c		\
@@ -142,3 +142,13 @@ EXTRA_DIST =			\
 				\
         gx_vga.c		\
         lx_vga.c
+
+if BUILD_ZTV
+
+ztv_drv_la_LTLIBRARIES = ztv_drv.la
+ztv_drv_la_LDFLAGS = -module -avoid-version
+ztv_drv_ladir = $(moduledir)/drivers
+
+ztv_drv_la_SOURCES = z4l.c
+
+endif BUILD_ZTV
