src/Makefile.am: added missing compat-api.h to geode_drv_la_SOURCES

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -40,6 +40,7 @@ geode_drv_la_LDFLAGS = -module -avoid-version
 geode_drv_ladir = $(moduledir)/drivers
 
 geode_drv_la_SOURCES =		\
+	compat-api.h		\
 	cimarron.c		\
 	cim_dev.h		\
 	durango.c		\
