libtool upgrade to include m4 directory
Signed-off-by: Martin-Éric Racine <martin-eric.racine@iki.fi>

--- a/configure.ac
+++ b/configure.ac
@@ -30,6 +30,7 @@ AC_INIT([xf86-video-geode],
 
 AC_CONFIG_SRCDIR([Makefile.am])
 AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR(.)
 
 # Initialize Automake
