--- a/configure.ac
+++ b/configure.ac
@@ -31,7 +31,7 @@ AC_INIT([xf86-video-geode],
 AC_CONFIG_SRCDIR([Makefile.am])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
-AC_CONFIG_AUX_DIR(.)
+AC_CONFIG_AUX_DIR([build-aux])
 
 # Initialize Automake
 AM_INIT_AUTOMAKE([foreign dist-bzip2])
