--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,102 +1,12 @@
-# vim: set expandtab shiftwidth=2 tabstop=8 textwidth=0 filetype=yaml:
-#
-# This CI uses the freedesktop.org ci-templates.
-# Please see the ci-templates documentation for details:
-# https://freedesktop.pages.freedesktop.org/ci-templates/
-
-.templates_sha: &template_sha 8ced685153983b7e36b65e9cb5f8881bf8704f0f # see https://docs.gitlab.com/ee/ci/yaml/#includefile
-
+variables:
+    FDO_UPSTREAM_REPO:  'xorg/driver/xf86-video-geode'
 
 include:
-  # Arch container builder template
-  - project: 'freedesktop/ci-templates'
-    ref: *template_sha
-    file: '/templates/debian.yml'
-  - project: 'freedesktop/ci-templates'
-    ref: *template_sha
-    file: '/templates/ci-fairy.yml'
-  - template: Security/SAST.gitlab-ci.yml
+    - local:    '.gitlab-ci/common/xorg-driver.yml'
 
-
-stages:
-  - prep             # prep work like rebuilding the container images if there is a change
-  - build            # for actually building and testing things in a container
-  - test
-  - deploy
-
-
-variables:
-  FDO_UPSTREAM_REPO: 'xorg/driver/xf86-video-geode'
-  # Force a 32-bit image, since Geode GPUs were part of 32-bit CPUs
-  # and src/cim/cim_defs.h has 32-bit assembly code in.
-  FDO_BASE_IMAGE: 'i386/debian:bullseye-slim'
-  FDO_DISTRIBUTION_VERSION: 'bullseye'  
-  # The tag should be updated each time the list of packages is updated.
-  # Changing a tag forces the associated image to be rebuilt.
-  # Note: the tag has no meaning, we use a date format purely for readability
-  FDO_DISTRIBUTION_TAG:  '2022-08-03.0'
-  FDO_DISTRIBUTION_PACKAGES: 'git gcc pkgconf autoconf automake libtool make xutils-dev x11proto-dev xserver-xorg-dev libpixman-1-dev'
-
-
-#
-# Verify that commit messages are as expected
-#
-check-commits:
-  extends:
-    - .fdo.ci-fairy
-  stage: prep
-  script:
-    - ci-fairy check-commits --junit-xml=results.xml
-  except:
-    - master@xorg/driver/xf86-video-geode
-  variables:
-    GIT_DEPTH: 100
-  artifacts:
-    reports:
-      junit: results.xml
-
-#
-# Verify that the merge request has the allow-collaboration checkbox ticked
-#
-check-merge-request:
-  extends:
-    - .fdo.ci-fairy
-  stage: deploy
-  script:
-    - ci-fairy check-merge-request --require-allow-collaboration --junit-xml=results.xml
-  artifacts:
-    when: on_failure
-    reports:
-      junit: results.xml
-  allow_failure: true
-
-
-#
-# Build a container with the given tag and the packages pre-installed.
-# This only happens if the tag changes, otherwise the existing image is
-# re-used.
-#
-container-prep:
-  extends:
-    - .fdo.container-build@debian
-  stage: prep
-  variables:
-    GIT_STRATEGY: none
-
-
-#
-# The default build, runs on the image built above.
-#
-build:
-  stage: build
-  extends:
-    - .fdo.distribution-image@debian
-  script:
-    - autoreconf -ivf
-    - mkdir _builddir
-    - pushd _builddir > /dev/null
-    - ../configure --disable-silent-rules CFLAGS='-m32'
-    - make
-    - make check
-    - make distcheck
-    - popd > /dev/null
+# This driver is 32bit only, as this GPU only exists on 32bit SoCs
+build@debian@amd64:
+    script:
+        - echo "This driver cannot be built on 64bit"
+    rules:
+        - when: never
