--- a/configure.ac
+++ b/configure.ac
@@ -21,7 +21,7 @@
 # Process this file with autoconf to produce a configure script
 
 # Initialize Autoconf
-AC_PREREQ(2.60)
+AC_PREREQ([2.60])
 AC_INIT([xf86-video-geode],
         [2.11.21],
         [https://gitlab.freedesktop.org/xorg/driver/xf86-video-geode/-/issues],
