Add option to avoid building GX support
One of the checks for HAVE_GX appeared to be in the wrong place. Once it
is in the right place, a configure option can be used to not set HAVE_GX
and avoid compiling the associated files.

Signed-off-by: Connor Behan <connor.behan@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -72,6 +72,20 @@ AC_ARG_ENABLE(geodegx-panel,
 	      [ PANEL_CPPFLAGS=-DPNL_SUP ])
 AC_SUBST(PANEL_CPPFLAGS)
 
+# Define a configure option to disable GX altogether
+AC_ARG_ENABLE(geodegx,
+	      AS_HELP_STRING([--disable-geodegx],
+	                     [Disable support for the Geode GX and only build LX]),
+	      [geodegx=no],
+	      [geodegx=yes])
+
+if test "x$geodegx" != "xno" ; then
+    BUILD_GX=yes
+    DEVICE_CPPFLAGS=-DHAVE_GX
+fi
+AM_CONDITIONAL(BUILD_GX, [test "x$BUILD_GX" = xyes])
+AC_SUBST(DEVICE_CPPFLAGS)
+
 # Define a configure option to enable/disable ztv
 AC_ARG_ENABLE(ztv,
 	AS_HELP_STRING([--enable-ztv],
