--- a/configure.ac
+++ b/configure.ac
@@ -57,11 +57,12 @@ AH_TOP([#include "xorg-server.h"])
 #			Configuration options
 # -----------------------------------------------------------------------------
 # Define a configure option for an alternate input module directory
+PKG_PROG_PKG_CONFIG([0.25])
 AC_ARG_WITH(xorg-module-dir,
             AS_HELP_STRING([--with-xorg-module-dir=DIR],
-                           [Default xorg module directory [[default=$libdir/xorg/modules]]]),
+                           [Default xorg module directory]),
             [moduledir="$withval"],
-            [moduledir="$libdir/xorg/modules"])
+            [moduledir=`$PKG_CONFIG --variable=moduledir xorg-server`])
 AC_SUBST([moduledir])
 
 # Define a configure option to enable/disable lcd panel support
