--- a/configure.ac
+++ b/configure.ac
@@ -136,10 +136,7 @@ XORG_DRIVER_CHECK_EXT(XV, videoproto)
 XORG_DRIVER_CHECK_EXT(DPMSExtension, xextproto)
 
 # Obtain compiler/linker options for the Geode driver dependencies
-PKG_CHECK_MODULES(XORG, [xorg-server >= 1.18 xproto fontsproto $REQUIRED_MODULES])
-PKG_CHECK_MODULES(XEXT, [xextproto >= 7.0.99.1],
-                  HAVE_XEXTPROTO_71="yes"; AC_DEFINE(HAVE_XEXTPROTO_71, 1, [xextproto 7.1 available]),
-                  HAVE_XEXTPROTO_71="no")
+PKG_CHECK_MODULES(XORG, [xorg-server >= 1.18 xproto fontsproto xextproto >= 7.0.99.1 $REQUIRED_MODULES])
 
 # Checks for libpciaccess support.
 SAVE_CPPFLAGS="$CPPFLAGS"
